fixes layout alignement issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,7 @@ div{
     
     display:grid;
     grid-template-columns: 1fr 4fr ;
+    grid-template-rows: 1fr;
 }
 /* sidebarr css*/
 .side-bar{
@@ -22,6 +23,8 @@ div{
     color: #ffffff;
     display: grid;
     grid-template-rows: 1fr 6fr;
+    max-height: 100vh;
+    overflow-y: auto;
     
 }
 .side-bar ul,.side-bar h1 {
@@ -122,11 +125,16 @@ div{
 
 }
 /* content css*/
+.content{
+    display: grid;
+    grid-row: 1fr 6fr;
+}
 .main-content{
     padding: 20px;
-    height: 100vh;
+
+
     display:grid;
-    grid-template: 1fr 1fr/ 3fr 1fr;
+    grid-template: 1fr/ 3fr 1fr;
     grid-template-areas: "project announcements"
                          "project trending";
     background-color: #eff5fd;
